# teachbook

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  MEMORY.md  README.md  package.json  pnpm-lock.yaml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  plugin_proposal.md
.github/workflows/: ci.yml  pages.yml  release.yml
docs/: ARCHITECTURE.md  NOTEBOOK_FORMAT.md  PLAN.md  PLUGIN_AUTHORING.md  USER_GUIDE.md
notebooks/: bfs-graph.tbk  binary-search.tbk  bubble-sort.tbk  convolution.tbk  dijkstra.tbk  lcs-dp.tbk  merge-sort.tbk  methane-combustion.tbk  mitosis.tbk  perceptron-forward.tbk  projectile-motion.tbk  qubit-gates.tbk  quiz-sampler.tbk  rc-circuit-schematic.tbk  rc-circuit.tbk  rlc-resonance.tbk  simple-harmonic-motion.tbk  voltage-divider.tbk
src/: App.css  App.tsx  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: claude.rs  examples.rs  lib.rs  library.rs  main.rs  settings.rs  teaching_server.rs
src/components/: ChatPane.tsx  CodeStepView.tsx  ConceptPane.tsx  ConceptReadView.tsx  ExamplesDialog.tsx  GenerateDialog.tsx  InsertStepDialog.tsx  MathLabel.tsx  RunPane.tsx  SceneRenderer.tsx  SettingsDialog.tsx  StepControls.tsx  TeacherDashboard.tsx  UserGuideDialog.tsx  VisualizationPane.tsx
src/lib/: claude.ts  cm-line-highlight.ts  editor-actions.ts  grade.ts  notebook-edit.ts  progress.ts  prompts.ts  pyodide-runner.ts  scene-completion.ts  scene-edit.ts  scene-editor-ext.ts  settings.ts  tbk-parser.ts  tbk-serializer.ts  teaching-api.ts  (+2 more)
website/: index.html
(+8 files in other folders)
